--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -4,7 +4,7 @@
 @import "tailwindcss";
 
 @theme{
-  --font-notosans: 'Noto Sans', sans-serif,"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-notosans: "Noto Sans Thai", sans-serif,"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 @config '../tailwind.config.js';
